# Chirp

./: .dir-locals.el  .gitignore  LICENSE  README.md  chirp-cloc-langdef.txt  features.md
.github/workflows/: build.yml  cmake.yml
design/: Outline.md
design/examples/: church.crp  cons.crp  factiter.crp
design/spec/: grammar.txt  tokens.txt
emacs/: chirp-mode.el
examples/: ackermann.crp  addfunc.crp  branches.crp  calculator.crp  cat.crp  church.crp  cons.crp  either.crp  factiter.crp  factrecur.crp  ffi.crp  fizz_buzz.crp  float_arithmetic.crp  gctest.c  gctest.crp  genrec.crp  globalroots.crp  hello_world.crp  io.crp  lambda.crp  list.crp  mutrec.crp  printf.crp  recursive_type.crp  rule110.crp  shiftfloat.crp  terrible_syntax.crp  test.sh  type_errors.crp  types.crp  wave.crp
scripts/: crpc  crpi  gen-tokens.rkt  gendfa  gentokens.rkt  render-ast.rkt
spec/: grammar.txt  tokens.txt
src/: .dir-locals.el  Ast.cc  Ast.h  AstCodegen.cc  AstInfer.cc  AstInfer.h  AstPrint.cc  AstPrint.h  CMakeLists.txt  DFA.h  Lexer.cc  Lexer.h  Loc.cc  Loc.h  NFA.h  Parser.cc  Parser.h  README.md  RegEx.h  Runtime.c  Runtime.h  Tokens.h  Type.cc  Type.h
src/common/: Arena.h  CMakeLists.txt  Err.cc  Err.h  Idx.h  JsonUtil.h  Loc.cc  Loc.h  LocJson.h  Logging.cc  Logging.h  README.md  Tokens.h  Util.h
src/compiler/: CMakeLists.txt  Expr.h  Type.cc  Type.h  test.cc
src/fsm/: CMakeLists.txt  DFA.h  DFA.tcc  Lexer.h  NFA.h  NFA.tcc  README.md  RegEx.cc  RegEx.h  RegEx.tcc  fsm.hpp  re.tcc  test.cc
src/ir/: CMakeLists.txt  README.md  Visitor.h
src/ir/ast/: Ast.cc  Ast.h  Lowering.cc  Lowering.h  README.md  Visitor.cc
src/ir/hir/: Builtins.h  Hir.cc  Hir.h  IdxCounter.cc  IdxCounter.h  Infer.cc  Infer.h  Json.cc  Json.h  Lowering.cc  Lowering.h  README.md  Rebind.cc  Rebind.h  RecurVisitor.h
src/ir/lir/: Codegen.cc  Codegen.h  CodegenUtil.cc  CodegenUtil.h  Disas.cc  Disas.h  Lir.h  README.md  TraitIntrinsics.cc  TraitIntrinsics.h
src/ir/lir/codegen/: Codegen.cc  Codegen.h  Intrinsics.cc  Intrinsics.h  Util.cc  Util.h
src/ir/tok/: CompiledDFA.cc  CompiledDFA.h  DFAData.h  Encode.cc  LexerCommon.h  Parser.cc  Parser.h  README.md  Tok.cc  Tok.h
src/ir/tokens/: Parser.cc  Parser.h
src/lexer/: CMakeLists.txt  Lexer.tcc  test.cc
src/lexer/fsm/: DFA.tcc  NFA.tcc  RegEx.tcc  test.cc
src/parser/: Ast.cc  Ast.h  CMakeLists.txt  Parser.cc  Parser.h  Tokens.h  in2ast.cc  in2tokens.cc  in2types.cc  test.cc
src/runtime/: CMakeLists.txt  Collector.c  Collector.h  README.md  Runtime.c
src/runtime/collector/: Collector.h  DynamicCollector.c  GenerationalGC.c  MarkAndSweepGC.c  NoopGC.c  RootVisitor.c  RootVisitor.h
src/test/: CMakeLists.txt  README.md  fsm_test.cc  infer_test.cc  lexer_test.cc  try_infer.cc  try_lower_hir.cc  try_lower_lir.cc  ty_test.cc  type_test.cc
src/type/: CMakeLists.txt  InferenceGraph.cc  InferenceGraph.h  README.md  Type.cc  Type.h  TypeImpl.cc  TypeImpl.h  TypePrint.cc  TypePrint.h
src/type/infer/: CMakeLists.txt  Fn.cc  Fn.h  InferenceGraph.cc  InferenceGraph.h  InferenceSeq.cc  InferenceSeq.h  InferenceSystem.cc  InferenceSystem.h  Insns.cc  Insns.h  Inst.cc  Inst.h  LookupTable.cc  LookupTable.h  Public.h  UnifyMap.cc  UnifyMap.h  VM.cc  VM.h
